--- a/common/banner.html
+++ b/common/banner.html
@@ -1,3 +1,24 @@
-<div class="banner">
-    这是banner
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link rel="stylesheet" href="css/banner.css">    
+</head>
+<body>
+    <div id="slideshow"> 
+        <!-- 插入轮播图的图片 -->
+        <img class="active" src="static/img/1.jpg" >
+        <img src="static/img/2.jpg" >
+        <img src="static/img/3.jpg" >
+        <!-- 插入轮播图的页码 -->
+        <div>
+            <span class="active">1</span>
+            <span>2</span>
+            <span>3</span>
+        </div>
+        <!-- 插入图片的描述 -->
+        <p class="active">第一幅的描述</p>
+        <p >第二幅的描述</p>
+        <p >第三幅的描述</p>
+    </div>
+</body>
+</html>
